ajouter un favicon dans le navigateur

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- Afficher une icône Favicon pour le navigateur -->
+    <link rel="icon" type="image/x-icon" href="./images/cute.png" />
+    <title>Kim-Ngan's Portfolio</title>
 </head>
 <body>
     
