ajouter fond d'écran pour la pade d'accueil

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Afficher une icône Favicon pour le navigateur -->
-    <link rel="icon" type="image/x-icon" href="./images/cute.png" />
-    <title>Kim-Ngan's Portfolio</title>
-</head>
-<body>
-    
-</body>
+        <!-- Fichier style css -->
+         <link rel="stylesheet" href="./css/style.css">
+
+        <!-- Afficher une icône Favicon pour le navigateur -->
+        <link rel="icon" type="image/x-icon" href="./images/cute.png" />
+        <title>Kim-Ngan's Portfolio</title>
+    </head>
+
+    <body>
+        
+    </body>
+
 </html>
