Ajouter navbar menu pour la page d'accueil

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Fichier style css -->
+        <!-- Google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+        <!-- Fichier style CSS -->
          <link rel="stylesheet" href="./css/style.css">
 
         <!-- Afficher une icône Favicon pour le navigateur -->
@@ -13,6 +18,40 @@
     </head>
 
     <body>
+        <!-- MENU -->
+        <div class="menu">
+            <div class="container">
+                <div class="menu__left">
+                    <a href="#" id="monLogo">
+                        <img src="./images/logo-2.svg" alt="mon_logo" width="60%" />
+                    </a>
+                </div>
+                <div class="menu__right">
+                    <ul>
+                        <li>
+                            <a href="#accueil" class="active">Accueil</a>
+                        </li>
+                        <li>
+                            <a href="#interet">Intérêt</a>
+                        </li>
+                        <li>
+                            <a href="#apprentissage">Apprentissage</a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/night.png" alt="icon_night" width="50%" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <!-- Fichier Main JS -->
+        <script src="./js/main.js"></script>
         
     </body>
 
