Ajouter la classe active au menu

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                     </a>
                 </div>
                 <div class="menu__right">
-                    <ul>
+                    <ul id="menuRight__navLink">
                         <li>
-                            <a href="#accueil" class="active">Accueil</a>
+                            <a href="#accueil" class="navlink active">Accueil</a>
                         </li>
                         <li>
-                            <a href="#interet">Intérêt</a>
+                            <a href="#interet" class="navlink">Intérêt</a>
                         </li>
                         <li>
-                            <a href="#apprentissage">Apprentissage</a>
+                            <a href="#apprentissage" class="navlink">Apprentissage</a>
                         </li>
                         <li>
                             <a href="#">
