Création d'un effet frappe avec CSS

--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
             </div>
         </div>
 
-     
+        <!-- PRÉSENTATION -->
+        <div class="section accueil">
+            <div class="container">
+                <div class="titre">À propos</div>
+                <div class="accueil__contenu">
+                    <p id="accueil__prenom">Bonjour ! Je suis Kim !</p>
+                    <p>Une vietnamienne habitant en France</p>
+                    <p>Une étudiante de BUT 2 en Science des Données</p>
+                </div>
+            </div>
+        </div>
+
+    
+
 
 
         <!-- Fichier Main JS -->
