Finir la section présentation

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="titre">À propos</div>
                 <div class="accueil__contenu">
                     <p id="accueil__prenom">Bonjour ! Je suis Kim !</p>
-                    <p>Une vietnamienne habitant en France</p>
-                    <p>Une étudiante de BUT 2 en Science des Données</p>
+                    <p class="accueil__texte">Une vietnamienne habitant en France</p>
+                    <p class="accueil__texte">Une étudiante de BUT 2 en Science des Données</p>
                 </div>
             </div>
         </div>
