création d'une section formation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,28 @@
                 <div class="accueil__contenu">
                     <p id="accueil__prenom">Bonjour ! Je suis Kim !</p>
                     <p class="accueil__texte">Une vietnamienne habitant en France</p>
-                    <p class="accueil__texte">Une étudiante de BUT 2 en Science des Données</p>
+                    <p class="accueil__texte">Une étudiante de BUT 2 en Science de Données</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- FORMATION -->
+        <div class="section formation">
+            <div class="container">
+                <div class="titre">Formation</div>
+                <div class="timeline">
+                    <div class="timeline__item itemRight">
+                            <div class="itemRight_contenu">
+                                <div class="item__left">
+                                    <div class="itemLeft__formation">
+                                        <p>IUT de Perpignan - Antenne de Carcassonne</p>
+                                        <p>Carcassonne, France</p>
+                                        <p>BUT 2 en Science de Données</p>
+                                    </div>
+                                </div>
+                                <div class="item__right">09/2024 - Présent</div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
