Finir la partie compétences

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="titre">À propos</div>
             <div class="accueil__contenu">
                 <p id="accueil__prenom">Bonjour ! Je suis Kim !</p>
-                <p class="accueil__texte">Une vietnamienne habitant en France</p>
+                <p class="accueil__texte">Une Vietnamienne habitant en France</p>
                 <p class="accueil__texte">Une étudiante de BUT 2 en Science de Données</p>
             </div>
         </div>
@@ -113,7 +113,24 @@
         </div>
     </div>
 
-
+    <!-- COMPÉTENCES -->
+    <div class="section competences">
+        <div class="container">
+            <div class="titre">Compétences</div>
+            <div class="skills" id="skills">
+                <!-- Afficher html ici en utilisant JS -->
+                <!-- <div class="skills__item">
+                    <div class="skillsItem__content">
+                        <p>Skill</p>
+                        <p>Percent %</p>
+                    </div>
+                    <div class="skillsItem__bar">
+                        <div class="bar__value" style="width: 85%;"></div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+    </div>
 
 
 
