Ajouter une partie de langues

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                             <h3>IUT de Perpignan - Antenne de Carcassonne</h3>
                             <p><i>Carcassonne, France</i></p>
                             <p>BUT de Science de Données - 2ième année</p>
+                            <p>Parcours Visualisation, Conception d'Outils Décisionnels (VCOD)</p>
                         </div>
                     </div>
                 </div>
@@ -128,6 +129,36 @@
                         <div class="bar__value" style="width: 85%;"></div>
                     </div>
                 </div> -->
+            </div>
+        </div>
+    </div>
+
+    <!-- LANGUES -->
+    <div class="section langues">
+        <div class="container">
+            <div class="titre">Langues</div>
+            <div class="langues__contenu">
+                <div class="langues__item">
+                    <div class="item__lang">
+                        <b>Français </b>
+                        <img src="./images/france.png" alt="drapeau-francais" width="30px">
+                    </div>
+                    <p class="niveau">DELF B2 - 2020</p>
+                </div>
+                <div class="langues__item">
+                    <div class="item__lang">
+                        <b>Anglais </b>
+                        <img src="./images/united-kingdom.png" alt="drapeau-anglais" width="30px">
+                    </div>
+                    <p class="niveau">TOEIC 810 - 2019</p>
+                </div>
+                <div class="langues__item">
+                    <div class="item__lang">
+                        <b>Vietnamien </b>
+                        <img src="./images/vietnam.png" alt="drapeau-vietnam" width="30px">
+                    </div>
+                    <p class="niveau">Natif</p>
+                </div>
             </div>
         </div>
     </div>
