Ajouter le pied

--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <!-- Fichier style CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- Ajouter FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Afficher une icône Favicon pour le navigateur -->
     <link rel="icon" type="image/x-icon" href="./images/cute.png" />
     <title>Kim-Ngan's Portfolio</title>
 </head>
 
 <body>
-    <!-- MENU -->
+    <!-- NAVBAR MENU -->
     <div class="menu">
         <div class="container">
             <div class="menu__left">
@@ -163,6 +168,28 @@
         </div>
     </div>
 
+    <!-- FOOTER (PIED) -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__contenu">
+                <div class="footer__merci">
+                    <p>Merci d'avoir visité mon portfolio</p>
+                    <div>
+                        <img src="./images/sign.png" alt="thank-you">
+                    </div>
+                </div>
+                <div class="footer__made">
+                    Créée avec
+                    <<i class="fa-solid fa-laptop-code"></i>/>
+                        , <<i class="fa-solid fa-mug-hot"></i>/>
+                            et <<i class="fa-solid fa-headphones"></i>/>
+                </div>
+                <div class="footer__signature">
+                    <img src="./images/logo-3.svg" alt="kim-ngan" width="250px">
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Fichier Main JS -->
