re-faire le style de la partie d'accueil

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="menu__left">
                 <a href="#" id="monLogo">
-                    <img src="./images/logo-2.svg" alt="mon_logo" width="60%" />
+                    <img src="./images/logo-1.svg" alt="mon_logo" width="60%" />
                 </a>
             </div>
             <div class="menu__right">
@@ -57,8 +57,8 @@
 
     <!-- PRÉSENTATION -->
     <div class="section accueil">
-        <div class="container">
-            <div class="titre">À propos</div>
+        <div class="container accueil__item">
+            <!-- <div class="titre">À propos</div> -->
             <div class="accueil__contenu">
                 <p id="accueil__prenom">Bonjour ! Je suis Kim !</p>
                 <p class="accueil__texte">Une Vietnamienne habitant en France</p>
@@ -124,6 +124,7 @@
         <div class="container">
             <div class="titre">Compétences</div>
             <div class="skills" id="skills">
+
                 <!-- Afficher html ici en utilisant JS -->
                 <!-- <div class="skills__item">
                     <div class="skillsItem__content">
@@ -180,9 +181,9 @@
                 </div>
                 <div class="footer__made">
                     Créée avec
-                    <<i class="fa-solid fa-laptop-code"></i>/>
-                        , <<i class="fa-solid fa-mug-hot"></i>/>
-                            et <<i class="fa-solid fa-headphones"></i>/>
+                    <<i class="fa-solid fa-laptop-code"></i> />
+                        , <<i class="fa-solid fa-mug-hot"></i> />
+                            et <<i class="fa-solid fa-headphones"></i> />
                 </div>
                 <div class="footer__signature">
                     <img src="./images/logo-3.svg" alt="kim-ngan" width="250px">
