ajouter 2 boutons pour le pied

--- a/index.html
+++ b/index.html
@@ -192,6 +192,19 @@
         </div>
     </footer>
 
+    <!-- BUTTONS (revenir à la page d'accueil & revenir en haut) -->
+    <div class="boutons">
+        <div class="btn bouton__home" id="btn-backHome" onclick="revenirAccueil()">
+            <button id="back-home">
+                <i class=" fa-solid fa-house"></i>
+            </button>
+        </div>
+        <div class="btn bouton__up" id="btn-backTop" onclick="revenirEnHaut()">
+            <button id="back-top">
+                <i class="fa-solid fa-chevron-up"></i>
+            </button>
+        </div>
+    </div>
 
     <!-- Fichier Main JS -->
     <script src="./js/main.js"></script>
