ajouter menu, footer, buttons pour les pages interet & apprentissage

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <div class="menu__right">
                 <ul id="menuRight__navLink">
                     <li>
-                        <a href="#accueil" class="navlink active">Accueil</a>
+                        <a href="#" class="navlink active">Accueil</a>
                     </li>
                     <li>
-                        <a href="#interet" class="navlink">Intérêt</a>
+                        <a href="./html/interet.html" class="navlink">Intérêt</a>
                     </li>
                     <li>
-                        <a href="#apprentissage" class="navlink">Apprentissage</a>
+                        <a href="./html/apprentissage.html" class="navlink">Apprentissage</a>
                     </li>
                     <li>
                         <a href="#">
