Fix bugs - pour afficher des compétences sur index.html et pour des boutons sur interet.html ou apprentissage.html

--- a/html/interet.html
+++ b/html/interet.html
@@ -63,6 +63,23 @@
         </div>
     </div>
 
+    <!-- TABLE DE MATIÈRES -->
+    <div class="sommaire">
+        <div class="container">
+            <div class="sommaire__contenu">
+                <h2>Tables de matières</h2>
+                <ul class="sommaire__liste">
+                    <li>Histoire</li>
+                    <li>Matériels essentiels</li>
+                    <li>Parcours</li>
+                    <li>Avantages</li>
+                    <li>Conseils & bonnes pratiques</li>
+                    <li>Galeries</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 
 
 
