Style pour la table des matières

--- a/html/interet.html
+++ b/html/interet.html
@@ -67,14 +67,26 @@
     <div class="sommaire">
         <div class="container">
             <div class="sommaire__contenu">
-                <h2>Tables de matières</h2>
+                <h2>Tables des matières</h2>
                 <ul class="sommaire__liste">
-                    <li>Histoire</li>
-                    <li>Matériels essentiels</li>
-                    <li>Parcours</li>
-                    <li>Avantages</li>
-                    <li>Conseils & bonnes pratiques</li>
-                    <li>Galeries</li>
+                    <li>
+                        <a href="#">Histoire</a>
+                    </li>
+                    <li>
+                        <a href="#">Matériels essentiels</a>
+                    </li>
+                    <li>
+                        <a href="#">Parcours</a>
+                    </li>
+                    <li>
+                        <a href="#">Parcours</a>
+                    </li>
+                    <li>
+                        <a href="#">Conseils & bonnes pratiques</a>
+                    </li>
+                    <li>
+                        <a href="#">Galeries</a>
+                    </li>
                 </ul>
             </div>
         </div>
