ajouter le plan de la page interet.html

--- a/html/interet.html
+++ b/html/interet.html
@@ -70,30 +70,81 @@
                 <h2>Tables des matières</h2>
                 <ul class="sommaire__liste">
                     <li>
-                        <a href="#">Histoire</a>
+                        <a href="#sectionHistoire">Histoire</a>
                     </li>
                     <li>
-                        <a href="#">Matériels essentiels</a>
+                        <a href="#sectionMateriels">Matériels essentiels</a>
                     </li>
                     <li>
-                        <a href="#">Parcours</a>
+                        <a href="#sectionParcours">Parcours</a>
                     </li>
                     <li>
-                        <a href="#">Parcours</a>
+                        <a href="#sectionAvantages">Avantages</a>
                     </li>
                     <li>
-                        <a href="#">Conseils & bonnes pratiques</a>
+                        <a href="#sectionConseils">Conseils & bonnes pratiques</a>
                     </li>
                     <li>
-                        <a href="#">Galeries</a>
+                        <a href="#sectionGaleries">Galeries</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
 
+    <!-- HISTOIRE -->
+    <div id="sectionHistoire" class="section histoire">
+        <div class="container">
+            <div class="titre">Histoire</div>
+            <div class="histoire__contenu">
+                Officia sit sit magna pariatur. Pariatur adipisicing voluptate aute adipisicing officia cupidatat.
+                Excepteur id pariatur cillum ea officia quis do. Aliqua duis qui duis amet ad est velit anim.
+                <br>
+                Dolore ea reprehenderit est sit magna ut nostrud ullamco pariatur reprehenderit aute deserunt
+                exercitation. Voluptate labore non esse qui cillum labore esse. Quis aute reprehenderit irure dolor in.
+                <br><br>
+                Fugiat voluptate officia fugiat elit sit eiusmod exercitation ea occaecat officia anim. Dolor minim
+                ipsum ullamco aute aliquip ex cupidatat. Enim magna veniam laborum esse reprehenderit incididunt
+                occaecat id consequat. Quis reprehenderit exercitation aute labore qui ex minim laboris dolor nulla. Do
+                ipsum exercitation ut anim. Dolor nulla aliqua aliqua id.
+            </div>
+        </div>
+    </div>
 
+    <!-- MATÉRIELS -->
+    <div id="sectionMateriels" class="section materiels">
+        <div class="container">
+            <div class="titre">Matériels nécessaires</div>
+        </div>
+    </div>
 
+    <!-- PARCOURS -->
+    <div id="sectionParcours" class="section parcours">
+        <div class="container">
+            <div class="titre">Parcours</div>
+        </div>
+    </div>
+
+    <!-- AVANTAGES -->
+    <div id="sectionAvantages" class="section avantages">
+        <div class="container">
+            <div class="titre">Avantages</div>
+        </div>
+    </div>
+
+    <!-- CONSEILS -->
+    <div id="sectionConseils" class="section conseils">
+        <div class="container">
+            <div class="titre">Conseils & bonnes pratiques</div>
+        </div>
+    </div>
+
+    <!-- GALERIES -->
+    <div id="sectionGaleries" class="section galeries">
+        <div class="container">
+            <div class="titre">Galeries</div>
+        </div>
+    </div>
 
     <!-- FOOTER (PIED) -->
     <footer class="footer">
