ajouter la présentation pour la page interet.html

--- a/html/apprentissage.html
+++ b/html/apprentissage.html
@@ -58,12 +58,12 @@
     <!-- TITRE DE LA PAGE -->
     <div class="section titrePage">
         <div class="container titrePage__items">
-            <h1>apprentissage - cours de html, css, javascript</h1>
+            <h1>apprentissage - cours r3-03 : html/css, javascript</h1>
             <div class="soulignement"></div>
         </div>
     </div>
 
-
+    <!--  -->
 
     <!-- FOOTER (PIED) -->
     <footer class="footer">
