--- a/html/interet.html
+++ b/html/interet.html
@@ -63,6 +63,20 @@
         </div>
     </div>
 
+    <!-- PRÉSENTATION -->
+    <div class="section presentation">
+        <div class="container presentation__contenu">
+            <h2>Présentation</h2>
+            <p>
+                Excepteur qui voluptate anim dolore esse nisi eu. Ipsum laborum culpa ipsum tempor tempor occaecat exercitation quis id proident consectetur ullamco in. Elit ipsum non duis proident tempor do consequat ut non consequat cupidatat. In qui nostrud anim nulla tempor dolore magna velit nostrud labore aliqua duis aute.
+                <br>
+                Lorem pariatur qui aliqua officia ut ea mollit Lorem id consectetur est irure nostrud qui. In occaecat sit minim occaecat. Est deserunt anim officia id velit sint ad laboris labore cillum elit ad magna.
+                <br>
+                Cupidatat ullamco occaecat nisi ut laborum proident ullamco commodo in. Dolor enim nisi mollit cillum irure officia. Eiusmod duis irure deserunt pariatur sit officia magna deserunt excepteur. Ut est laboris reprehenderit adipisicing mollit dolore tempor do et eu do nulla. Enim labore sit aliqua fugiat ea irure nulla enim qui magna. Excepteur nulla ut deserunt qui ea aliquip adipisicing excepteur exercitation voluptate eu proident commodo nostrud. Velit laboris Lorem adipisicing irure do nisi aliquip eu non enim eiusmod.
+            </p>
+        </div>
+    </div>
+
     <!-- TABLE DE MATIÈRES -->
     <div class="sommaire">
         <div class="container">
