ajouter structure pour l'apprentissage

--- a/html/apprentissage.html
+++ b/html/apprentissage.html
@@ -58,12 +58,52 @@
     <!-- TITRE DE LA PAGE -->
     <div class="section titrePage">
         <div class="container titrePage__items">
-            <h1>apprentissage - cours r3-03 : html/css, javascript</h1>
+            <h1>apprentissage - cours r3.03 : html/css, javascript</h1>
             <div class="soulignement"></div>
         </div>
     </div>
 
-    <!--  -->
+    <!-- PRÉSENTATION -->
+    <div class="section presentation">
+        <div class="container presentation__contenu">
+            <h2>Présentation</h2>
+            <p>
+                Excepteur qui voluptate anim dolore esse nisi eu. Ipsum laborum culpa ipsum tempor tempor occaecat exercitation quis id proident consectetur ullamco in. Elit ipsum non duis proident tempor do consequat ut non consequat cupidatat. In qui nostrud anim nulla tempor dolore magna velit nostrud labore aliqua duis aute.
+                <br>
+                Lorem pariatur qui aliqua officia ut ea mollit Lorem id consectetur est irure nostrud qui. In occaecat sit minim occaecat. Est deserunt anim officia id velit sint ad laboris labore cillum elit ad magna.
+                <br>
+                Cupidatat ullamco occaecat nisi ut laborum proident ullamco commodo in. Dolor enim nisi mollit cillum irure officia. Eiusmod duis irure deserunt pariatur sit officia magna deserunt excepteur. Ut est laboris reprehenderit adipisicing mollit dolore tempor do et eu do nulla. Enim labore sit aliqua fugiat ea irure nulla enim qui magna. Excepteur nulla ut deserunt qui ea aliquip adipisicing excepteur exercitation voluptate eu proident commodo nostrud. Velit laboris Lorem adipisicing irure do nisi aliquip eu non enim eiusmod.
+                <br><br>
+                Cette page contient deux parties principales, <a href="#coursR303"><b>les connaissances apprises du cours R3.03</b></a> et <a href="#"><b>les compétences acquises de la conception du portfolio</b></a>.
+            </p>
+        </div>
+    </div>
+
+    <!-- DU COURS R3.03 -->
+    <div id="coursR303" class="section cours">
+        <div class="container">
+            <div class="titre">Connaissances apprises du cours R3.03</div>
+            <div class="cours__contenu">
+                <!-- Partie 1 - HTML -->
+                <div class="cours__partie cours__html">
+                    <h2 class="cours__titre">html</h2>
+                    
+                </div>
+
+                <!-- Partie 2 - CSS -->
+                <div class="cours__partie cours__css">
+                    <h2 class="cours__titre">css</h2>
+                </div>
+
+                <!-- Partie 3 - JavaScript -->
+                <div class="cours__partie cours__js">
+                    <h2 class="cours__titre">javascript</h2>
+                </div>
+            </div>     
+        </div>
+    </div>
+
+    <!-- DU PORTFOLIO -->
 
     <!-- FOOTER (PIED) -->
     <footer class="footer">
